# meshemy

./: CONTRIBUTE.md  Justfile  README.md  pyproject.toml
.github/workflows/: test.yaml
blender_testing_sandbox/: sand_castle.py
demo/: from_glb.py  seal_testing.py
meshemy/blender/: __init__.py  constant.py  shortcut.py  utils.py  workflows.py
meshemy/blender/animations/: tableturn.py
meshemy/blender/shortcut/: io.py  select.py
meshemy/cookbook/: base.py  blender.py  open3d.py  trimesh.py
meshemy/utility/: exception.py  io.py  seal.py
shelved_code/pymesh/: __init__.py  _test_pymesh.py  fix_mesh.py  pymesh.py
test/: __init__.py  conftest.py  test_base.py  test_blender.py  test_open3d.py
