[tool.poetry]
name = "meshemy"
version = "0.4.2"
description = "Developer friendly suite for manipulating mesh"
authors = ["caniko <canhtart@gmail.com>"]
readme = "README.md"
license = "BSD-4"

[tool.poetry.dependencies]
python = ">=3.10,<3.11.0"
pydantic = "^1.10.4"

bpy = { version = "^3.4.0", optional = true }
open3d = { version = "0.16.0", optional = true }

numpy = "<1.24.0"
pydantic-numpy = "^1.3.0"

pymeshfix = "^0.16.2"
ordered-set = "^4.1.0"

[tool.poetry.group.dev.dependencies]
bpy = "*"
open3d = "*"
pytest = "*"

[tool.poetry.extras]
full = ["bpy", "open3d"]
blender = ["bpy"]
open3d = ["open3d"]

[tool.isort]
profile = "black"

[tool.black]
line-length = 120
target-version = ["py310"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

