[tool.poetry]
name = "meshemy"
version = "1.2.0"
description = "Developer friendly suite for manipulating mesh"
authors = ["caniko <canhtart@gmail.com>"]
readme = "README.md"
license = "BSD-4"

[tool.poetry.dependencies]
python = ">=3.10,<3.11.0"
pydantic = "^1.10.4"
pydantic-numpy = "*"

bpy = { version = "^3.4.0", optional = true }
open3d-cpu = { version = "^0.17.0", optional = true }
trimesh = { version = "^3.20.2", optional = true }

numpy = "<1.24.0"

pymeshfix = "^0.16.2"
ordered-set = "^4.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "*"

bpy = "*"
open3d-cpu = "*"
trimesh = "*"

[tool.poetry.extras]
full = ["bpy", "open3d-cpu", "trimesh"]
blender = ["bpy"]
open3d = ["open3d-cpu"]
trimesh = ["trimesh"]

[tool.isort]
profile = "black"

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.ruff]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

